--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=dc9d38bd1f9f730dfde3",
+    "/css/app.css": "/css/app.css?id=3783b88133723b60a3ef"
 }
